# mock-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.sh
.github/: renovate.json
.github/workflows/: ci.yml
crates/mock-cli/: Cargo.toml
crates/mock-cli/src/: main.rs
crates/mock-core/: Cargo.toml
crates/mock-core/src/: alternate.rs  correct.rs  dress.rs  lib.rs  phrases.rs
crates/mock-core/tests/: parity.rs
crates/mock-wasm/: Cargo.toml
crates/mock-wasm/src/: lib.rs
src/: dress.rs  garble.rs  lib.rs  main.rs  specials.rs
tests/: parity.rs
