[workspace]
members = ["crates/mock-core", "crates/mock-cli", "crates/mock-wasm"]
resolver = "2"

[profile.release]
lto = true
panic = "abort"

[profile.release.package.mock-cli]
opt-level = "z"
codegen-units = 1
strip = true

[profile.release.package.mock-wasm]
opt-level = "z"
codegen-units = 1
strip = true
